infra/k8s/angular.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tsam-angular-depl
  labels:
    app: tsam-angular-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tsam-angular-app
  template:
    metadata:
      name: tsam-angular-app
      labels:
        app: tsam-angular-app
    spec:
      containers:
        - name: tsam-angular-app
          # image: shaileshb02/tsam-angular
          image: us.gcr.io/elegant-racer-345508/tsam-angular

---

apiVersion: v1
kind: Service
metadata:
  name: tsam-angular-serv
spec:
  selector:
    app: tsam-angular-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
