infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myservicea
  # name: ingress-nginx-controller
  annotations:
    kubernetes.io/ingreess.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: gposts.com
  # - host: admin.swabhavtechlabs.com
    http:
      paths:
        - path: /api/v1/?(.*)
          pathType: Prefix
          backend:
            service:
              name: tsam-go-serv
              port:
                number: 8080 #port number for service
        - path: /?(.*)
          pathType: Prefix
          backend:
            service:
              name: tsam-angular-serv
              port:
                number: 80 #port number for service
